--- a/docs/1.入门.md
+++ b/docs/1.入门.md
@@ -21,10 +21,14 @@
 
 #### 例：rpc请求  --> data sent to Server
 
+http://abc.com/jsonrpc
+
+post
+
 ```json
 {
     "jsonrpc": "2.0",
-    "method": "login",
+    "method": "/account/login",
     "params": {
         "username":"anthony",
         "password":"mypassword",
